tests/NormalTests/paczka1/fuzzy1/55158633.err
Error in line 1: NMDA005 S354 65,1
Error in line 23: A963 S104 82,7
Error in line 25: A963 S824 52,4
Error in line 29: Oyh3vyEe3 S104 47,2
Error in line 33: qRQgZh6bl7E A963 25,0
